objects/Spark_Conversation__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Member Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Message Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <description>The linked object Id. Link to any object and retreive link based on Id</description>
        <label>ObjectId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Object Type</description>
        <formula>IF( BEGINS(ObjectId__c, '500' ), 'Case', 'Opportunity' )</formula>
        <label>Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spark_Id__c</fullName>
        <description>This is the Id of the spark room</description>
        <label>Spark Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerFields__c</fullName>
        <label>TriggerFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>This field will hold the unique key combination of OrgID+sObjectID.</description>
        <label>Unique Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Type__c</fullName>
        <description>This field contains the Spark room object name.</description>
        <label>sObject Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <description>Stores the object and room information</description>
    <label>Spark_Conversation</label>
    <nameField>
        <label>Spark_Conversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spark_Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Member_Count__c</columns>
        <columns>Message_Count__c</columns>
        <columns>ObjectId__c</columns>
        <columns>sObject_Type__c</columns>
        <columns>Spark_Id__c</columns>
        <columns>TriggerFields__c</columns>
        <columns>Unique_Key__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>